# calc

./: CMakeLists.txt  main.cc  main.cpp  makefile
assets/: style.ss
doc/: doc.texi
src/: crutch_list.txt
src/containers/: array.h  s21_list.h  s21_stack.h  vector.h
src/controller/: CalcModelController..h  CalcModelController.h
src/model/: Calculator.cc  Calculator.h  DefaultModel.h  ICalculationModel.h  ITranslationModel.h  Tokenizer.cc  Tokenizer.h  Translator.cc  Translator.h
src/view/: ICalculatorView.h  assets.qrc  mainwindow.cc  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomplot.cpp
tests/: ModelTest.cc  TokenizerTest.cc  TranslationFixerTest.cc  TranslationTest.cc  model_test.c
